--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install Nix
-        uses: cachix/install-nix-action@v23
+        uses: DeterminateSystems/nix-installer-action@main
             
       - name: Install Magic Nix Cache
         uses: DeterminateSystems/magic-nix-cache-action@main
